--- a/css/custom.css
+++ b/css/custom.css
@@ -64,6 +64,59 @@
   white-space: pre-line;
 }
 
+.standardimage1{
+  max-width:400px;
+  border-radius: 2px;
+  width: 100%;
+  margin: 15px 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: flex;
+  margin-left: 180px;
+
+   
+}
+.standardimage2{
+  max-width:400px;
+  border-radius: 2px;
+  width: 100%;
+  margin: 15px 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: flex;
+  margin-left: 80px;
+
+   
+}
+.standardimage3{
+  max-width:400px;
+  border-radius: 2px;
+  width: 100%;
+  margin: 15px 0;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: flex;
+  margin-left: 180px;
+
+   
+}
+.customsep{
+  
+}
+
+
 .customimage1{
   border-radius: 2px;
   width: 100%;
@@ -78,6 +131,7 @@
   align-self: center;
   max-width: 1000px;
   margin-top: 5px;
+  
 }
 
 .customimage2{
@@ -93,6 +147,7 @@
   display: flex;
   max-width: 400px;
   margin-bottom: 0px;
+  margin-left: 80px;
   
   
 }
@@ -110,6 +165,7 @@
   display: inline-flex;
   max-width: 400px;
   margin-bottom: 0px;
+  margin-left: 80px;
   
   
 }
@@ -127,6 +183,7 @@
   display: inline-flex;
   max-width: 400px;
   margin-bottom: 0px;
+  margin-left: 180px;
   
   
 }
@@ -155,7 +212,29 @@
   justify-content: center;
 }
 
-.interact{
-  
+.customimagelogo{
+  max-width: 100px;
+}
+.customh2{
+  font-size: 24px;
+  color: #333333;
+  margin: 30px 0 0 0;
+  margin-top: 70px;
+  padding: 0;
+  font-weight: bold;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif
+}
+.extracontent{
+  width: 80%;
+  margin: 0 auto;
+}
+.flex-row-space-between2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  align-items: center;
+  align-content: stretch;
+  box-sizing: border-box;
 }
 
