--- a/css/frame.css
+++ b/css/frame.css
@@ -108,7 +108,7 @@ hr {
 .menu {
   position: relative;
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 1700px;
 }
 
 .menu .menu-table {
@@ -160,7 +160,9 @@ hr {
 }
 
 .menu .menu-items {
+  
   align-self: stretch;
+  justify-content: flex-end;
 }
 
 .menu .menu-items>a,
@@ -267,7 +269,7 @@ hr {
   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
   font-weight: 300;
   line-height: 1.5;
-  max-width: 900px;
+  max-width: 1700px;
   overflow-x: auto;
 }
 
@@ -415,6 +417,7 @@ hr {
 .text {
   margin: 10px 0 10px 0;
   padding: 0;
+
 }
 
 .text-large-margin {
